compiler/test/conformance/valid/expr_tuple.tu
// expr: tupla literal + índice de tupla  .0 .1
fn main() {
  let t = (1, "dois", 3.0)
  print(t.0)
  print(t.1)
  print(t.2)
}
