compiler/test/conformance/invalid/inv_unterminated_string.tu
// INVÁLIDO: string não terminada (erro léxico)
fn main() {
  let s = "olá mundo
  print(s)
}
